# factorio-changelog-creator

./: .editorconfig  .gitignore  CHANGELOG.md  README.md  changelog.json  pyproject.toml  requirements-dev.txt  setup.py
factorio_changelog_creator/: __init__.py  cli.py  command_line.py  creator.py
src/: changelog-script.lua  changelog-script.py
