[tool.poetry]
name = "factorio-changelog-creator"
version = "1.1.2"
description = "A script to generate multiple Factorio changelog formats."
authors = ["Roang_zero1 <lucas@brandstaetter.tech>"]
license = "MIT License"
readme = "README.md"
homepage = "https://github.com/Roang-zero1/factorio-changelog-creator"
repository = "https://github.com/Roang-zero1/factorio-changelog-creator"
documentation = "https://github.com/Roang-zero1/factorio-changelog-creator"
classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pylint = "^2.4.4"

[tool.poetry.scripts]
factorio-changelog-creator = "factorio_changelog_creator.cli:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
